# listing-enhancer

./: .gitignore  README.md  main.py  pyproject.toml
src/: import.py
src/extract/: dictionary.py  download.py
utils/: paths.py
